--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -40,6 +40,9 @@
 		margin-left: 13px;
 		margin-right: 13px;
 	}
+	#certID {
+		margin-left: -10px;
+	}
 	#home-carousel  .item {
 		height: 500px;
 	}
