--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,6 +202,7 @@
 		font-weight: 600;
 		padding: 0;
 		margin: 14px;
+		color: #595555;
 	}
 
 	.st-navbar ul li a:hover,
@@ -250,7 +251,7 @@
     margin: 4px;
     float: left;
 	}
-	
+
 
 	.ct-inline_item {
     height: : 20px;
@@ -311,19 +312,18 @@
 /* 5. SLIDER */
 
 	#slider{
-		margin-top: 80px;
+		margin-top: 0px;
 	}
 
 	#home-carousel  .item {
 		background-position: center top;
-		background-repeat: no-repeat;
 		background-size:cover;
 		width:100%;
-		height: 650px;
+		height: 450px;
 	}
 
 	#home-carousel .item:before{
-		background-color: #000;
+		
 		content: "";
 		height: 100%;
 		top: 0;
