--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -117,7 +117,9 @@
 	}
 
 	#home-carousel  .item {
-		height: 300px;
+		max-width: 100%;
+    	height: auto;
+    	width: auto\9;
 	}
 	.ct-navbar .navbar-collapse ul{
 		margin-top: 10px;
