--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1188,3 +1188,94 @@
 
 
 
+/* 17. FLAGS */
+
+	#flaging{
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
+	.flag-container{
+		margin-top: 10px;
+	}
+
+	.flag-image img {
+    max-height: 40px;
+    width: auto;
+	}
+
+
+
+	.flag-image{
+		position: relative;
+		height: : 40px;
+    	min-width: : 20px;
+    	max-width: : auto;
+    	margin: 4px;
+    	float: left;
+	}
+
+	.flag-text{
+		padding: 15px;
+	}
+
+	.flag-text h4{
+		margin-top: 0;
+		margin-bottom: 6px;
+		color: #888888;
+		text-align: center;
+	}
+
+	.flag-text span{
+		text-transform: uppercase;
+	}
+	.flag-text2{
+		padding: 12px;
+	}
+	.flag-text2 a {
+		margin-top: 0;
+		margin-bottom: 12;
+		color: #888888;
+		text-align: center;
+	}
+
+	.flag-container .member-social{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.6);
+		left: 0;
+		top: 0;
+		text-align: center;
+		opacity: 0;
+		-webkit-transition: all 0.3s ease-out 0s;
+		-moz-transition: all 0.3s ease-out 0s;
+		-ms-transition: all 0.3s ease-out 0s;
+		-o-transition: all 0.3s ease-out 0s;
+		transition: all 0.3s ease-out 0s;
+		-moz-transform: scale(0.5);
+		-webkit-transform: scale(0.5);
+		-o-transform: scale(0.5);
+		-ms-transform: scale(0.5);
+		transform: scale(0.5);
+	}
+
+	.flag-container:hover .member-social{
+		opacity: 1;
+		-moz-transform: scale(1);
+		-webkit-transform: scale(1);
+		-o-transform: scale(1);
+		-ms-transform: scale(1);
+		transform: scale(1);
+	}
+
+	.flag-container .member-social a{
+		position: relative;
+		font-size: 16px;
+		color: #fff;
+		top: 47%;
+	}
+
+	.flag-container:hover .member-social a{
+		margin: 6px;
+	}
