change thai font to thivaraj and english font to heveltica

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,10 +31,10 @@
 
 /* 1. IMPORT SECTION */
 
-	@import url("http://fonts.googleapis.com/css?family=Raleway:200,300,600,700&subset=latin,latin-ext");
+/*	@import url("http://fonts.googleapis.com/css?family=Raleway:200,300,600,700&subset=latin,latin-ext");
 
-
-
+*/
+@import url("https://fonts.googleapis.com/css?family=Taviraj&subset=thai");
 
 /* 2. BASIC STYLES */
 
@@ -43,7 +43,7 @@
 	}
 
 	body {
-		font-family: "Raleway", Helvetica, Arial, sans-serif;
+		font-family: "Taviraj",Helvetica, Arial, sans-serif;
 		font-size: 14px;
 		font-weight: 200;
 		line-height: 1.7857;
