fix responsive picture at home page

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,5 +1,16 @@
 /* lg */ 
 @media (min-width: 1200px) {
+	.portfolio-items .fixed-name {
+		height: 60px;
+	}
+	.portfolio-items .fixed-pic {
+		height: 200px;
+	}
+
+	.portfolio-items .img-responsive {
+		height: 200px;
+		width: 360px;
+	}
 
 }
 
