--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1297,9 +1297,11 @@
 
 	.dropdown-menu {
 	min-width: 200px;
+	max-height: 400px;
 }
 .dropdown-menu.columns-2 {
 	min-width: 500px;
+	max-height: 400px;
 }
 .dropdown-menu.columns-3 {
 	min-width: 600px;
