add search by locate

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1302,7 +1302,12 @@
 
 .dropdown-menu {
 	min-width: 200px;
-	max-height: 600px;
+	
+}
+.scrollable-menu {
+    height: auto;
+    max-height: 500px;
+    overflow-x: hidden;
 }
 .dropdown-menu.columns-2 {
 	min-width: 500px;
