--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -120,7 +120,8 @@
 	}
 	.flag-image{
     	width: 100px;
-    	margin-left: 15px;
+    	margin-left: 12px;
+    	margin-top: 10px;
 	}
 	.flag-container{
 		width: 110px;
