--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,12 +213,12 @@
 		color: #000;
 	}
 	.st-navbar img {
-    max-height: 40px;
+    max-height: 50px;
     width: auto;
 	}
 
 	.st-item {
-    height: : 40px;
+    height: 70px;
     min-width: : 20px;
     max-width: : auto;
     margin: -8px;
