--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,5 +1,5 @@
 /* lg */ 
-@media (min-width: 1200px) {
+@media (min-width: 1200px) and (max-width: 1440px) {
 	.portfolio-items .fixed-name {
 		height: 60px;
 	}
@@ -11,15 +11,9 @@
 		height: 200px;
 		width: 360px;
 	}
-
 	#home-carousel  .item {
-		height: 700px;
-		width: 1600px;
-	}
-	#home-carousel  img{
-		height: 700px;
-		width: 1600px;
-	}
+		height: 400px;
+	}	
 
 }
 
@@ -27,7 +21,7 @@
 @media (min-width: 992px) and (max-width: 1199px) {
 
 	#home-carousel  .item {
-		height: 500px;
+		height: 350px;
 	}
 
 	.carousel-caption h1 {
@@ -144,7 +138,7 @@
 	}
 
 	#home-carousel  .item {
-		height: 300px;
+		height: 200px;
 	}
 	.ct-navbar .navbar-collapse ul{
 		margin-top: 10px;
