--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,7 +84,9 @@
 	p {
 		line-height: 1.5;
 	}
-
+	a{
+	font-family: "Sukhumvit Set",'Taviraj',Helvetica, sans-serif;	
+	}
 	h1, h2, h3, h4, h5, h6{
 		font-family: "Sukhumvit Set",'Taviraj',Helvetica, sans-serif;
 		font-weight: 700;
