--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1319,6 +1319,13 @@
 .dropdown-menu.columns-3 {
 	min-width: 600px;
 }
+.dropdown-menu.columns-6 {
+	min-width: 1200px;
+	  left: 50%;
+  right: auto;
+  text-align: center;
+  transform: translate(-50%, 0);
+}
 .dropdown-menu li a {
 	font-weight: 60;
 }
@@ -1327,6 +1334,7 @@
 }
 .multi-column-dropdown li a {
 	display: block;
+	margin-left: -40px;
 	clear: both;
 	line-height: 1.428571429;
 	color: #333;
@@ -1356,3 +1364,46 @@
 		width:100%;
 		height: 500px;
 	}
+
+
+.sidebar-nav {
+    padding: 9px 0;
+}
+
+.dropdown-menu .sub-menu {
+    left: 100%;
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    margin-top: -1px;
+}
+
+.dropdown-menu li:hover .sub-menu {
+    visibility: visible;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
+    margin-top: 0;
+}
+
+.navbar .sub-menu:before {
+    border-bottom: 7px solid transparent;
+    border-left: none;
+    border-right: 7px solid rgba(0, 0, 0, 0.2);
+    border-top: 7px solid transparent;
+    left: -7px;
+    top: 10px;
+}
+.navbar .sub-menu:after {
+    border-top: 6px solid transparent;
+    border-left: none;
+    border-right: 6px solid #fff;
+    border-bottom: 6px solid transparent;
+    left: 10px;
+    top: 11px;
+    left: -6px;
+}
