--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1320,7 +1320,7 @@
 	min-width: 600px;
 }
 .dropdown-menu.columns-6 {
-	min-width: 13	00px;
+	min-width: 1300px;
 	  left: 50%;
   right: auto;
   text-align: center;
