--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,6 +1,9 @@
 @media (min-width: 1441px){
 	.sidebar-nav {
     padding: 9px 0;
+    #home-carousel  .item {
+		height: 500px;
+	}
 }
 
 .dropdown-menu .sub-menu {
