--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,12 +1,7 @@
-
-@media ( (min-width: 1441px) and (max-width: 1600px){
+@media (min-width: 1441px){
 	.sidebar-nav {
     padding: 9px 0;
-    
 }
-#home-carousel  .item {
-		height: 500px;
-	}
 
 .dropdown-menu .sub-menu {
     left: 100%;
