--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,6 +1,18 @@
 @media (min-width: 1441px){
-	.sidebar-nav {
+.sidebar-nav {
     padding: 9px 0;
+}
+
+.portfolio-items .fixed-name {
+		height: 60px;
+	}
+.portfolio-items .fixed-pic {
+		height: 200px;
+}
+
+.portfolio-items .img-responsive {
+		height: 200px;
+		width: 360px;
 }
 
 .dropdown-menu .sub-menu {
