redesigning program page

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -340,7 +340,12 @@
 		text-align: center;
 	}
 
-
+	.fix-tour-h {
+		height: 50px;
+	}
+	.text-intour{
+		margin-top: 0px;
+	}
 }
 
 /* XS Portrait */
